--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.4.13",
     "@react-spring/web": "^9.7.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
