--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^13.4.13",
     "@react-spring/web": "^9.7.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "gsap": "^3.12.2",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.5.4",
+    "react-use-gesture": "^9.1.3",
     "tailwindcss": "3.3.2"
   }
 }
