--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^10.16.1",
     "gsap": "^3.12.2",
     "next": "13.4.4",
     "postcss": "8.4.24",
