--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,15 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "contentlayer/generated": ["./.contentlayer/generated"]
     }
-  }
+  },
+  "include": [
+    "next-env.d.js",
+    "**/*.js",
+    "**/*.jsx",
+    ".next/types/**/*.js",
+    ".contentlayer/generated"
+  ]
 }
