--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@react-spring/web": "^9.7.2",
     "autoprefixer": "10.4.14",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.16.1",
     "gsap": "^3.12.2",
     "next": "13.4.4",
+    "next-contentlayer": "^0.3.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
