--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "react-lottie-player": "^1.5.4",
     "react-use-gesture": "^9.1.3",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
