--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.5.4",
     "react-use-gesture": "^9.1.3",
+    "rehype-pretty-code": "^0.10.1",
+    "shiki": "^0.14.4",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
