--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-lottie-player": "^1.5.4",
     "react-use-gesture": "^9.1.3",
     "rehype-pretty-code": "^0.10.1",
+    "remark-gfm": "^4.0.0",
     "shiki": "^0.14.4",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/react": "18.2.22"
   }
 }
