--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-use-gesture": "^9.1.3",
     "rehype-pretty-code": "^0.10.1",
     "remark-gfm": "^4.0.0",
+    "sharp": "^0.32.6",
     "shiki": "^0.14.4",
     "tailwindcss": "3.3.2"
   },
