--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "serve": "npx http-server out"
@@ -33,7 +33,8 @@
     "remark-gfm": "^4.0.0",
     "sharp": "^0.32.6",
     "shiki": "^0.14.4",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
