--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "serve": "npx http-server out"
   },
   "dependencies": {
+    "@mdx-js/esbuild": "^2.3.0",
     "@mdx-js/loader": "^2.3.0",
     "@next/mdx": "^13.5.3",
     "@react-spring/web": "^9.7.2",
     "autoprefixer": "10.4.14",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
-    "esbuild": "^0.19.3",
+    "esbuild": "^0.19.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.16.1",
@@ -28,8 +29,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.5.4",
-    "react-use-gesture": "^9.1.3",
     "rehype-pretty-code": "^0.10.1",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.32.6",
     "shiki": "^0.14.4",
