--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-sitemap && next export",
     "start": "next start",
     "lint": "next lint",
     "serve": "npx http-server out"
@@ -25,6 +25,7 @@
     "mdx-bundler": "^9.2.1",
     "next": "13.4.4",
     "next-contentlayer": "^0.3.4",
+    "next-sitemap": "^4.2.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
