--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@next/mdx": "^13.5.3",
     "@react-spring/web": "^9.7.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "10.4.14",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
